# Big-Beautiful-Screens

./: .cdinfo  .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json  render.yaml  requirements.prod.txt  requirements.txt  test_api.py  test_colors.py
.github/: AGENTS.md
.github/workflows/: ci.yml  deploy.yml  dockerhub.yml  docs.yml
app/: AGENTS.md  auth.py  config.py  connection_manager.py  database.py  demo_screen.json  layouts.py  logging_middleware.py  main.py  models.py  models_media.py  onboarding.py  quota.py  rate_limit.py  routes_me.py  security.py  seed_templates.py  themes.py  utils.py  webhooks.py
app/db/: __init__.py  base.py  factory.py  postgres.py  sqlite.py
app/mcp/: __init__.py  arg_models.py  cli.py  handlers.py  resources.py  routes.py  schema.py  server.py  streamable_http_asgi.py  tools.py
app/routes/: __init__.py  (+9 more)
bruno/: Create Page copy.bru  Create Page.bru  Delete Page.bru  Get Screen by ID copy.bru  Get Screen by ID.bru  Get Screens.bru  Update Gap.bru  Update Page.bru  Update Rotation.bru  Update Screen.bru  Update Theme.bru  Update radius.bru  bruno.json
docs/: AGENTS.md  CNAME  index.md
scripts/: AGENTS.md  accept_screenshots.sh  copy_docs_screenshots.sh  create_layout_demo.sh  test_quota.sh
static/: AGENTS.md  admin.css  screen.css  screen.html  screen.js
tests/: AGENTS.md  conftest.py  saas_utils.py  test_account_keys.py  test_media.py  test_onboarding.py  test_rate_limit.py  test_screens.py
(+90 files in other folders)
